--- a/ByteMarket/views/login.html
+++ b/ByteMarket/views/login.html
@@ -32,11 +32,11 @@
         <form class="form">
             <div class="mb-3">
                 <label for="username" class="form-label">Correo Electrónico</label>
-                <input type="email" class="form-control" id="username" placeholder="ejemplo@correo.com" required>
+                <input type="email" class="form-control" id="username" placeholder="ejemplo@correo.com">
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Contraseña</label>
-                <input type="password" class="form-control" id="password" required>
+                <input type="password" class="form-control" id="password">
             </div>
 
             <div class="d-flex justify-content-between align-items-center mb-3">
@@ -54,10 +54,12 @@
                     </a>
                 </div>
                 <div class="col-md-6">
-                    <button type="submit" class="btn btn-outline-dark btn-custom w-100 me-2">
-                        <i class="bi bi-box-arrow-in-right"></i> Iniciar sesión
-                    </button>
-                </div>
+                    <a href="../views/home.html" style="text-decoration: none;">
+                        <button type="button" class="btn btn-outline-dark btn-custom w-100 me-2">
+                            <i class="bi bi-box-arrow-in-right"></i> Iniciar sesión
+                        </button>
+                    </a>
+                </div>                
             </div>
         </form>
     </div>
