--- a/ByteMarket/views/productDetails.html
+++ b/ByteMarket/views/productDetails.html
@@ -22,10 +22,13 @@
         <div class="container-fluid px-0">
             <div class="row align-items-center headerContainer">
 
-                <div class="col-2 d-flex align-items-center text-white header-logo"> <!-- Añadido clase header-logo -->
-                    <img src="../public/favicon.ico" alt="Logo" width="40" height="40" class="me-2">
-                    <h5 class="fw-bolder mb-0">ByteMarket</h5>
+                <div class="col-2 d-flex align-items-center text-white header-logo">
+                    <a href="../views/home.html" class="d-flex align-items-center text-white text-decoration-none">
+                        <img src="../public/favicon.ico" alt="Logo" width="40" height="40" class="me-2">
+                        <h5 class="fw-bolder mb-0">ByteMarket</h5>
+                    </a>
                 </div>
+                
 
                 <div class="col-5 searchContainer">
                     <form class="d-flex" role="search">
@@ -38,35 +41,38 @@
 
                 <div class="col-3 m-0 justify-content-center headerButtons">
                     <div>
-                        <button class="btn btn-outline-dark btn-custom headerButton" type="button">
+                        <button class="btn btn-outline-dark btn-custom headerButton" type="button" onclick="window.location.href='../views/favorite.html'">
                             <i class="bi bi-heart-fill" style="color: white;"></i>
-                            <text class="fav-sellText">Favoritos</text>
+                            <span class="fav-sellText">Favoritos</span>
                         </button>
                     </div>
+                    
 
                     <div>
-                        <button class="btn btn-outline-dark btn-custom headerButton" type="button">
+                        <button class="btn btn-outline-dark btn-custom headerButton" type="button" onclick="window.location.href='../views/newProductForm.html'">
                             <i class="bi bi-plus-lg"></i>
-                            <text class="fav-sellText">Vender</text>
+                            <span class="fav-sellText">Vender</span>
                         </button>
-                    </div>
+                    </div>                    
 
                     <div>
-                        <button class="btn btn-outline-dark btn-custom headerButton" type="button">
+                        <button class="btn btn-outline-dark btn-custom headerButton" type="button" onclick="window.location.href='../views/chat.html'">
                             <i class="bi bi-chat-fill"></i>
-                            <text class="fav-sellText">Chats</text>
+                            <span class="fav-sellText">Chats</span>
                         </button>
-                    </div>
+                    </div>                    
                 </div>
 
-                <div class="col-2 header-profile" height="55"> <!-- Añadido clase header-profile -->
-                    <div>
-                        <img class="profilePic" src="../public/defaul-pfp.jpg" alt="Logo">
-                    </div>
-                    <div>
-                        <p class="text-white fw-bolder mb-0">Usuario</p>
-                    </div>
-                </div>
+                <div class="col-2 header-profile" height="55">
+                    <a href="../views/profile.html" class="d-flex align-items-center text-decoration-none">
+                        <div>
+                            <img class="profilePic" src="../public/defaul-pfp.jpg" alt="Logo">
+                        </div>
+                        <div>
+                            <p class="text-white fw-bolder mb-0">Usuario</p>
+                        </div>
+                    </a>
+                </div>                
             </div>
         </div>
     </header>
