--- a/ByteMarket/public/headerStyle.css
+++ b/ByteMarket/public/headerStyle.css
@@ -128,3 +128,9 @@
 }
 
 /*FIN DE SECCION DE CSS PARA LA CABECERA CON EL USUARIO REGISTRAD0*/
+
+.productCard .card-img-top {
+    object-fit: cover;
+    width: 100%;
+    height: 200px; /* Todos las imágenes tendrán la misma altura */
+}
