footer Home solved

--- a/ByteMarket/views/home.html
+++ b/ByteMarket/views/home.html
@@ -262,11 +262,7 @@
         </div>
     </section>
     
-    <footer class="bg-dark text-center text-white py-4">
-        <div class="container">
-            <p class="mb-0">ByteMarket</p>
-        </div>
-    </footer>
+    <footer class="bg-dark text-white text-center py-2">ByteMarket</footer>
 </body>
 
 </html>
