--- a/ByteMarket/views/adminScreen.html
+++ b/ByteMarket/views/adminScreen.html
@@ -38,13 +38,13 @@
                 <div class="col-3 m-0 justify-content-center headerButtons">
                     <div>
                         <button class="btn btn-outline-dark btn-custom headerButton" type="button" onclick="window.location.href='../views/favorite.html'">
-                            <i class="bi bi-heart-fill" style="color: white;"></i>
-                            <span class="fav-sellText">Favoritos</span>
+                            <i class="bi bi-flag-fill" style="color: white;"></i>
+                            <span class="fav-sellText">Reportes</span>
                         </button>
                     </div>
                     
 
-                    <div>
+                    <!-- <div>
                         <button class="btn btn-outline-dark btn-custom headerButton" type="button" onclick="window.location.href='../views/newProductForm.html'">
                             <i class="bi bi-plus-lg"></i>
                             <span class="fav-sellText">Vender</span>
@@ -56,7 +56,7 @@
                             <i class="bi bi-chat-fill"></i>
                             <span class="fav-sellText">Chats</span>
                         </button>
-                    </div>                    
+                    </div>                     -->
                 </div>
 
                 <div class="col-2 header-profile" height="55">
