--- a/ByteMarket/views/newProductForm.html
+++ b/ByteMarket/views/newProductForm.html
@@ -47,7 +47,7 @@
                         </button>
                     </div>
                     
-
+                    
                     <div>
                         <button class="btn btn-outline-dark btn-custom headerButton" type="button" onclick="window.location.href='../views/newProductForm.html'">
                             <i class="bi bi-plus-lg"></i>
@@ -137,7 +137,7 @@
             </div>
         </form>
     </div>
-    <footer class="bg-dark text-white text-center py-2">ByteMarket</footer>
+    <section class="bg-dark text-white text-center py-2" id="footer">ByteMarket</section>
 </body>
 
 </html>
