--- a/ByteMarket/public/login.css
+++ b/ByteMarket/public/login.css
@@ -3,7 +3,9 @@
     margin-top: 60px;
     margin-bottom: 60px;
     text-align: center;
+    max-width: 500px;
 }
+
 .header-logo {
     padding-left: 50px;
 }
