--- a/ByteMarket/views/login.html
+++ b/ByteMarket/views/login.html
@@ -44,18 +44,13 @@
             <div class="d-flex justify-content-between align-items-center mb-3">
                 <div>
                     <input type="checkbox" id="rememberMe">
-                    <label for="rememberMe" class="form-label ms-2">Recordarme</label>
+                    <label for="rememberMe" class="form-label ms-2 fw-normal">Recordarme</label>
                 </div>
-                <a href="#" class="text-white">¿Olvidaste tu contraseña?</a>
+                <a href="#" class="text-white fw-normal">¿Olvidaste tu contraseña?</a>
             </div>
 
-            <div class="row d-flex justify-content-between buttons">
-                <div class="col-md-6">
-                    <a href="../views/singIn.html" class="btn btn-outline-dark btn-custom w-100">
-                        <i class="bi bi-person-plus"></i> Crear Cuenta
-                    </a>
-                </div>
-                <div class="col-md-6">
+            <div class="row d-flex justify-content-center buttons">
+                <div class="col-md-12">
                     <a href="../views/home.html" style="text-decoration: none;">
                         <button type="button" class="btn btn-outline-dark btn-custom w-100 me-2">
                             <i class="bi bi-box-arrow-in-right"></i> Iniciar sesión
@@ -63,6 +58,11 @@
                     </a>
                 </div>                
             </div>
+
+            <div class="text-center">
+                <p>¿No tienes cuenta? <a href="singIn.html" class="text-white">Registrate</a></p>
+            </div>
+
         </form>
     </div>
     <section class="bg-dark text-white text-center py-2" id="footer">ByteMarket</section>
