--- a/ByteMarket/views/singIn.html
+++ b/ByteMarket/views/singIn.html
@@ -53,24 +53,24 @@
             <div class="d-flex justify-content-between align-items-center mb-3">
                 <div>
                     <input type="checkbox" id="acceptTerms">
-                    <label for="acceptTerms" class="form-label ms-2">Acepto los términos y condiciones</label>
+                    <label for="acceptTerms" class="form-label ms-2 fw-normal">Acepto los términos y condiciones</label>
                 </div>
             </div>
 
-            <div class="row d-flex justify-content-between buttons">
-                <div class="col-md-6">
-                    <a href="../views/login.html" class="btn btn-outline-dark btn-custom w-100">
-                        <i class="bi bi-box-arrow-in-left"></i> Iniciar sesión
-                    </a>
-                </div>
-                <div class="col-md-6">
+            <div class="row d-flex justify-content-center buttons">
+                <div class="col-md-12">
                     <button type="submit" class="btn btn-outline-dark btn-custom w-100 me-2">
                         <i class="bi bi-person-plus"></i> Registrarse
                     </button>
                 </div>
             </div>
+
+            <div class="text-center">
+                <p>¿Ya tienes cuenta? <a href="login.html" class="text-white">Inicia Sesión</a></p>
+            </div>
+
         </form>
     </div>
-    <section class = "bg-dark text-white text-center py-2" id="footer" >ByterMarker</section>
+    <section class = "bg-dark text-white text-center py-2" id="footer" >ByteMarket</section>
 </body>
 </html>
