--- a/ByteMarket/views/profile.html
+++ b/ByteMarket/views/profile.html
@@ -86,7 +86,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                     <li class="nav-item"><a class="nav-link" href="../views/favorite.html">Favoritos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="">Reseñas</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../views/reviews.html">Reseñas</a></li>
                     <li class="nav-item"><a class="nav-link" href="../views/historyPurchase.html">Últimas compras</a></li>
                     <li class="nav-item"><a class="nav-link" href="../views/historySales.html">Últimas ventas</a></li>
                 </ul>
