--- a/ByteMarket/views/reviews.html
+++ b/ByteMarket/views/reviews.html
@@ -72,6 +72,22 @@
             </div>
         </div>
     </header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container px-4 px-lg-5">
+            <a class="navbar-brand" href="profile.html">Perfil</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+                    <li class="nav-item"><a class="nav-link" href="../views/favorite.html">Favoritos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../views/reviews.html">Reseñas</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../views/historyPurchase.html">Últimas compras</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../views/historySales.html">Últimas ventas</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <div class="container mt-4">
         <h3>Reseñas del Usuario</h3>
         <div class="row">
