--- a/ByteMarket/views/adminScreen.html
+++ b/ByteMarket/views/adminScreen.html
@@ -37,7 +37,7 @@
 
                 <div class="col-3 m-0 justify-content-center headerButtons">
                     <div>
-                        <button class="btn btn-outline-dark btn-custom headerButton" type="button" onclick="window.location.href='../views/favorite.html'">
+                        <button class="btn btn-outline-dark btn-custom headerButton" type="button">
                             <i class="bi bi-flag-fill" style="color: white;"></i>
                             <span class="fav-sellText">Reportes</span>
                         </button>
@@ -79,16 +79,6 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                </ul>
-                <form class="d-flex">
-                    <button class="btn btn-outline-dark" type="submit">
-                        <i class="bi-cart-fill me-1"></i>
-                        Cart <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
-                    </button>
-                </form>
-            </div>
         </div>
     </nav>
 
