add headerStyle to css and corrected home_template

--- a/ByteMarket/backend/src/main/resources/templates/home_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/home_template.html
@@ -10,10 +10,11 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/homeStyle.css">
+    <link rel="stylesheet" href="/css/headerStyle.css">
     <link rel="icon" type="image/x-icon" href="../public/favicon.ico">
     <title>ByteMarket</title>
 </head>
-{{>header_template}}
+{{>header}}
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
