--- a/ByteMarket/backend/src/main/resources/templates/header.html
+++ b/ByteMarket/backend/src/main/resources/templates/header.html
@@ -4,11 +4,10 @@
 
             <div class="col-2 d-flex align-items-center text-white header-logo">
                 <a href="/" class="d-flex align-items-center text-white text-decoration-none">
-                    <img src="../public/favicon.ico" alt="Logo" width="40" height="40" class="me-2"> <!-- La ruta del logo puede cambiar -->
+                    <img src="../public/favicon.ico" alt="Logo" width="40" height="40" class="me-2">
                     <h5 class="fw-bolder mb-0">ByteMarket</h5>
                 </a>
             </div>
-            
 
             <div class="col-5 searchContainer">
                 <form class="d-flex" role="search">
@@ -19,40 +18,78 @@
                 </form>
             </div>
 
+            {{^logged}}
+            <div class="col-3 loginButtons">
+                <a href="../views/singIn.html" style="text-decoration: none;">
+                    <button class="btn btn-outline-dark btn-custom" type="submit">
+                        <i class="bi-person-fill me-1"></i> Iniciar sesión o registrarse
+                    </button>
+                </a>
+            </div>
+            {{/logged}}
+
+            {{#logged}}
+            {{#user}}
             <div class="col-3 m-0 justify-content-center headerButtons">
                 <div>
-                    <button class="btn btn-outline-dark btn-custom headerButton" type="button" onclick="window.location.href='/favorite'">
+                    <button class="btn btn-outline-dark btn-custom headerButton" type="button"
+                        onclick="window.location.href='../views/favorite.html'">
                         <i class="bi bi-heart-fill" style="color: white;"></i>
                         <span class="fav-sellText">Favoritos</span>
                     </button>
                 </div>
-                
+
 
                 <div>
-                    <button class="btn btn-outline-dark btn-custom headerButton" type="button" onclick="window.location.href='/newProduct'">
+                    <button class="btn btn-outline-dark btn-custom headerButton" type="button"
+                        onclick="window.location.href='../views/newProductForm.html'">
                         <i class="bi bi-plus-lg"></i>
                         <span class="fav-sellText">Vender</span>
                     </button>
-                </div>                    
+                </div>
 
                 <div>
-                    <button class="btn btn-outline-dark btn-custom headerButton" type="button" onclick="window.location.href='/chats'">
+                    <button class="btn btn-outline-dark btn-custom headerButton" type="button"
+                        onclick="window.location.href='../views/chat.html'">
                         <i class="bi bi-chat-fill"></i>
                         <span class="fav-sellText">Chats</span>
                     </button>
-                </div>                    
+                </div>
             </div>
 
             <div class="col-2 header-profile" height="55">
                 <a href="../views/profile.html" class="d-flex align-items-center text-decoration-none">
                     <div>
-                        <img class="profilePic" src="{{profilePic}}" alt="Logo"> <!-- Lo mismo hay que cambiar esto -->
+                        <img class="profilePic" src="../public/defaul-pfp.jpg" alt="Logo">
                     </div>
                     <div>
-                        <p class="text-white fw-bolder mb-0">{{username}}</p>
+                        <p class="text-white fw-bolder mb-0">{{userName}}</p>
                     </div>
                 </a>
-            </div>                
+            </div>
+            {{/user}}
+
+            {{#admin}}
+            <div>
+                <button class="btn btn-outline-dark btn-custom headerButton" type="button">
+                    <i class="bi bi-flag-fill" style="color: white;"></i>
+                    <span class="fav-sellText">Reportes</span>
+                </button>
+            </div>
+
+            <div class="col-2 header-profile" height="55">
+                <a href="../views/profile.html" class="d-flex align-items-center text-decoration-none">
+                    <div>
+                        <img class="profilePic" src="../public/defaul-pfp.jpg" alt="Logo">
+                    </div>
+                    <div>
+                        <p class="text-white fw-bolder mb-0">{{adminName}}</p>
+                    </div>
+                </a>
+            </div> 
+            {{/admin}}
+
+            {{/logged}}
         </div>
     </div>
 </header>
