--- a/ByteMarket/backend/src/main/resources/templates/header.html
+++ b/ByteMarket/backend/src/main/resources/templates/header.html
@@ -4,7 +4,7 @@
 
             <div class="col-2 d-flex align-items-center text-white header-logo">
                 <a href="/" class="d-flex align-items-center text-white text-decoration-none">
-                    <img src="../public/favicon.ico" alt="Logo" width="40" height="40" class="me-2">
+                    <img src="images/favicon.ico" alt="Logo" width="40" height="40" class="me-2">
                     <h5 class="fw-bolder mb-0">ByteMarket</h5>
                 </a>
             </div>
@@ -42,7 +42,7 @@
 
                 <div>
                     <button class="btn btn-outline-dark btn-custom headerButton" type="button"
-                        onclick="window.location.href='../views/newProductForm.html'">
+                        onclick="window.location.href='ByteMarket\backend\src\main\resources\templates\newProduct.html'">
                         <i class="bi bi-plus-lg"></i>
                         <span class="fav-sellText">Vender</span>
                     </button>
