All templates uploaded and modified, also created a folder "images" in "static" and added images

--- a/ByteMarket/backend/src/main/resources/templates/historySales.html
+++ b/ByteMarket/backend/src/main/resources/templates/historySales.html
@@ -16,11 +16,11 @@
 </head>
 {{>header}}
 
-{{#purchase-products}}
+{{#saled-products}}
 <section class="py-4">
     <div class="container otherProdContainer">
         <div class="">
-            <h2 class="fw-bolder mb-3">Historial de compras</h2>
+            <h2 class="fw-bolder mb-3">Historial de ventas</h2>
         </div>
         <div class="row otherProducts">
             <div class="otherProduct col-3">
@@ -39,7 +39,6 @@
         </div>
     </div>
 </section>
-{{/purchase-products}}
-
+{{/saled-products}}
 
 {{>footer}}
