--- a/ByteMarket/backend/src/main/resources/templates/editProfile.html
+++ b/ByteMarket/backend/src/main/resources/templates/editProfile.html
@@ -11,7 +11,7 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/homeStyle.css">
     <link rel="stylesheet" href="/css/headerStyle.css">
-    <link rel="icon" type="image/x-icon" href="../public/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <title>ByteMarket</title>
 </head>
 {{>header}}
@@ -32,15 +32,15 @@
 
         <form>
             <div class="mb-3 text-start">
-                <label class="form-label">Nombre</label>
+                <label class="form-label">{{username}}</label>
                 <input type="text" class="form-control" value="Usuario Ejemplo" title="Usuario">
             </div>
             <div class="mb-3 text-start">
-                <label class="form-label">Correo Electrónico</label>
+                <label class="form-label">{{email}}</label>
                 <input type="email" class="form-control" value="usuario@email.com" title="Correo">
             </div>
             <div class="mb-3 text-start">
-                <label class="form-label">Ubicación</label>
+                <label class="form-label">{{location}}</label>
                 <input type="text" class="form-control" value="Madrid, España" title="Ubicacion">
             </div>
             <div class="mb-3 text-start">
