--- a/ByteMarket/backend/src/main/resources/templates/favorite.html
+++ b/ByteMarket/backend/src/main/resources/templates/favorite.html
@@ -1,56 +1,34 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/homeStyle.css">
-    <link rel="stylesheet" href="/css/headerStyle.css">
+    <link rel="stylesheet" href="../static/css/productDetailsStyle.css">
+    <link rel="stylesheet" href="../static/css/headerStyle.css">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
-    <title>ByteMarket</title>
+    <title>{{product.title}}</title>
 </head>
+
 {{>header}}
 
-{{>navbar_home}}
+{{>navbar_profile}}
 
-<body>   
-    <section class="bg-dark py-2">
-        <div class="container topProdContainer">
-            <div class="text-white">
-                <h2 class="fw-bolder">{{featured_title}}</h2>
-            </div>
-            <div class="topProducts gx-4 gx-lg-5"> 
-                {{#featured_products}}
-                <div class="topProduct col-3">
-                    <a href="productDetail_template.html" style="text-decoration: none;">
-                        <div class="productCard card h-100">
-                            <img class="card-img-top" src="{{image}}" alt="{{name}}" />
-                            <div class="card-body p-4">
-                                <div class="text-center">
-                                    <h5 class="fw-bolder">{{name}}</h5>
-                                    {{price}}€
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                {{/featured_products}}
-            </div>
-        </div>
-    </section>
-    
+<body>
     <section class="py-4">
         <div class="container otherProdContainer">
             <div class="">
-                <h2 class="fw-bolder mb-3">{{other_products_title}}</h2>
+                <h2 class="fw-bolder mb-3">{{favorite_products_title}}</h2>
             </div>
             <div class="row otherProducts">
-                {{#other_products}}
+                {{#favorite_products}}
                 <div class="otherProduct col-3">
                     <a href="{{url}}" style="text-decoration: none;">
                         <div class="productCard card h-100">
@@ -64,7 +42,7 @@
                         </div>
                     </a>
                 </div>
-                {{/other_products}}
+                {{/favorite_products}}
             </div>
         </div>
     </section>
