--- a/ByteMarket/backend/src/main/resources/templates/navbar_profile.html
+++ b/ByteMarket/backend/src/main/resources/templates/navbar_profile.html
@@ -1,3 +1,5 @@
+
+<!--Esto tiene que ser privado ¿Cómo lo pongo?-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container px-4 px-lg-5">
         <a class="navbar-brand" href="/profile">Perfil</a>
@@ -6,10 +8,10 @@
             aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                <li class="nav-item"><a class="nav-link" href="/favorite">Favoritos</a></li>
-                <li class="nav-item"><a class="nav-link" href="/reviews">Reseñas</a></li>
-                <li class="nav-item"><a class="nav-link" href="/recentPurchases">Últimas compras</a></li>
-                <li class="nav-item"><a class="nav-link" href="/recentSales">Últimas ventas</a></li>
+                <li class="nav-item"><a class="nav-link" href="favorite.html">Favoritos</a></li>
+                <li class="nav-item"><a class="nav-link" href="reviews.html">Reseñas</a></li>
+                <li class="nav-item"><a class="nav-link" href="historyPurchase.html">Últimas compras</a></li>
+                <li class="nav-item"><a class="nav-link" href="historySales.html">Últimas ventas</a></li>
             </ul>
         </div>
     </div>
