--- a/ByteMarket/backend/src/main/resources/templates/profile_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/profile_template.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/css/profileStyle.css">
     <link rel="stylesheet" href="/css/editProfile.css">
     <link rel="stylesheet" href="/css/headerStyle.css">
-    <link rel="icon" type="image/x-icon" href="../public/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <title>ByteMarket</title>
 </head>
 
