href from home_template updated

--- a/ByteMarket/backend/src/main/resources/templates/home_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/home_template.html
@@ -27,7 +27,7 @@
             <div class="topProducts gx-4 gx-lg-5"> 
                 {{#featured_products}}
                 <div class="topProduct col-3">
-                    <a href="productDetail_template.html" style="text-decoration: none;">
+                    <a href="{{url}}" style="text-decoration: none;">
                         <div class="productCard card h-100">
                             <img class="card-img-top" src="{{image}}" alt="{{name}}" />
                             <div class="card-body p-4">
