Categories updated and added a button to sign out in profile template

--- a/ByteMarket/backend/src/main/resources/templates/editProfile.html
+++ b/ByteMarket/backend/src/main/resources/templates/editProfile.html
@@ -53,6 +53,11 @@
             </div>
             <button type="submit" class="btn btn-custom w-100">Guardar Cambios</button>
             <a href="#" class="btn-delete">Eliminar cuenta</a>
+            <div>
+                <button class="btn btn-outline-dark btn-custom headerButton" type="button" onclick="window.location.href='home_template.html'">
+                    <i class="fas fa-sign-out-alt"></i> Cerrar sesión
+                </button>
+            </div>
         </form>
     </div>
 </div>
