--- a/ByteMarket/backend/src/main/resources/templates/header.html
+++ b/ByteMarket/backend/src/main/resources/templates/header.html
@@ -20,7 +20,7 @@
 
             {{^logged}}
             <div class="col-3 loginButtons">
-                <a href="../views/singIn.html" style="text-decoration: none;">
+                <a href="../login" style="text-decoration: none;">
                     <button class="btn btn-outline-dark btn-custom" type="submit">
                         <i class="bi-person-fill me-1"></i> Iniciar sesión o registrarse
                     </button>
