--- a/ByteMarket/backend/src/main/resources/templates/login_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/login_template.html
@@ -16,8 +16,20 @@
     <title>ByteMarket</title>
 </head>
 
-{{>header}}
+
 <body>
+    <header class="bg-dark py-2">
+        <div class="container-fluid px-0">
+            <div class="align-items-center headerContainer">
+                <a href="home.html" class="col-2 text-decoration-none p-0">
+                    <div class="d-flex align-items-center text-white header-logo"> <!-- Añadido clase header-logo -->
+                        <img src="../public/favicon.ico" alt="Logo" width="40" height="40" class="me-2">
+                        <h5 class="fw-bolder mb-0">ByteMarket</h5>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </header>
     <div class="container">
         <h2 class="mb-4">Iniciar sesión</h2>
         <form class="form" action="login" method="post">
@@ -54,7 +66,6 @@
 
         </form>
     </div>
-
+    <section class="bg-dark text-white text-center py-2" id="footer">ByteMarket</section>
 </body>
-{{>footer}}
 </html>
