--- a/ByteMarket/backend/src/main/resources/templates/home_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/home_template.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -18,16 +20,16 @@
 
 {{>navbar_home}}
 
-<body>   
+<body>
     <section class="bg-dark py-2">
         <div class="container topProdContainer">
             <div class="text-white">
                 <h2 class="fw-bolder">{{featured_title}}</h2>
             </div>
-            <div class="topProducts gx-4 gx-lg-5"> 
+            <div class="topProducts gx-4 gx-lg-5">
                 {{#featured_products}}
                 <div class="topProduct col-3">
-                    <a href="{{url}}" style="text-decoration: none;">
+                    <a href="#" style="text-decoration: none;">
                         <div class="productCard card h-100">
                             <img class="card-img-top" src="{{image}}" alt="{{name}}" />
                             <div class="card-body p-4">
@@ -43,7 +45,7 @@
             </div>
         </div>
     </section>
-    
+
     <section class="py-4">
         <div class="container otherProdContainer">
             <div class="">
@@ -52,7 +54,7 @@
             <div class="row otherProducts">
                 {{#other_products}}
                 <div class="otherProduct col-3">
-                    <a href="{{url}}" style="text-decoration: none;">
+                    <a href="#" style="text-decoration: none;">
                         <div class="productCard card h-100">
                             <img class="card-img-top" src="{{image}}" alt="{{name}}" />
                             <div class="card-body p-4">
