--- a/ByteMarket/backend/src/main/resources/templates/login_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/login_template.html
@@ -12,7 +12,7 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/login.css">
     <link rel="stylesheet" href="css/headerStyle.css">
-    <link rel="icon" type="image/x-icon" href="../public/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <title>ByteMarket</title>
 </head>
 
@@ -23,7 +23,7 @@
             <div class="align-items-center headerContainer">
                 <a href="home.html" class="col-2 text-decoration-none p-0">
                     <div class="d-flex align-items-center text-white header-logo"> <!-- Añadido clase header-logo -->
-                        <img src="../public/favicon.ico" alt="Logo" width="40" height="40" class="me-2">
+                        <img src="images/favicon.ico" alt="Logo" width="40" height="40" class="me-2">
                         <h5 class="fw-bolder mb-0">ByteMarket</h5>
                     </div>
                 </a>
