--- a/ByteMarket/backend/src/main/resources/templates/home_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/home_template.html
@@ -21,15 +21,16 @@
 {{>navbar_home}}
 
 <body>
-    {{#featured_products}}
+    {{#carrusel}}
     <section class="bg-dark py-2">
         <div class="container topProdContainer">
-            <div class="text-white">  
+            <div class="text-white">
                 <h2 class="fw-bolder">{{featured_title}}</h2>
             </div>
             <div class="topProducts gx-4 gx-lg-5">
+                {{#featured_products}}
                 <div class="topProduct col-3">
-                    <a href="#" style="text-decoration: none;">
+                    <a href="/product/{{id}}" style="text-decoration: none;">
                         <div class="productCard card h-100">
                             <img class="card-img-top" src="{{image}}" alt="{{name}}" />
                             <div class="card-body p-4">
@@ -41,10 +42,12 @@
                         </div>
                     </a>
                 </div>
+                {{/featured_products}}
             </div>
         </div>
     </section>
-    {{/featured_products}}
+    {{/carrusel}}
+
 
     <section class="py-4">
         <div class="container otherProdContainer">
@@ -54,7 +57,7 @@
             <div class="row otherProducts">
                 {{#other_products}}
                 <div class="otherProduct col-3">
-                    <a href="#" style="text-decoration: none;">
+                    <a href="/product/{{id}}" style="text-decoration: none;">
                         <div class="productCard card h-100">
                             <img class="card-img-top" src="{{image}}" alt="{{name}}" />
                             <div class="card-body p-4">
