Error templates, product controller mapping added

--- a/ByteMarket/backend/src/main/resources/templates/deletedProduct.html
+++ b/ByteMarket/backend/src/main/resources/templates/deletedProduct.html
@@ -22,10 +22,10 @@
 <body>
 <div class="container mt-4 mb-5">
     <div class="alert alert-danger" role="alert">
-        <strong>Error:</strong> Datos incorrectos.
+        Se ha eliminado el producto {{product.name}}
     </div>
     <button class="btn btn-outline-dark btn-custom" type="submit">
-        <a href="/login">Prueba otra vez</a>
+        <a href="/">Inicio</a>
     </button>
 </div>
 
