--- a/ByteMarket/backend/src/main/resources/templates/login_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/login_template.html
@@ -16,6 +16,7 @@
     <title>ByteMarket</title>
 </head>
 
+{{>header}}
 
 <body>
     <header class="bg-dark py-2">
@@ -66,6 +67,8 @@
 
         </form>
     </div>
-    <section class="bg-dark text-white text-center py-2" id="footer">ByteMarket</section>
+  
+    {{>footer}}
+    
 </body>
 </html>
