--- a/ByteMarket/backend/src/main/resources/templates/productDetail_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/productDetail_template.html
@@ -61,6 +61,7 @@
         </div>
     </div>
     <hr>
+    <!-- {{#buyer}} solo se verá si es el que ha comprado el producto -->
     <div class="d-flex align-items-center justify-content-between mt-4">
         <h3>Reportar un Problema</h3>
         <button class="btn btn-custom" id="btn-report-issue">Añadir Reporte</button>
@@ -94,6 +95,7 @@
             document.getElementById("report-form-container").classList.toggle("d-none");
         });
     </script>
+    <!-- {{/buyer}} -->
     <hr>
     <div class="d-flex align-items-center justify-content-between mt-4">
         <h3>Valoraciones</h3>
