--- a/ByteMarket/backend/src/main/resources/templates/error.html
+++ b/ByteMarket/backend/src/main/resources/templates/error.html
@@ -22,10 +22,10 @@
 <body>
 <div class="container mt-4 mb-5">
     <div class="alert alert-danger" role="alert">
-        <strong>Error:</strong> Datos incorrectos.
+        <strong>Error:</strong> Producto no encontrado.
     </div>
     <button class="btn btn-outline-dark btn-custom" type="submit">
-        <a href="/login">Prueba otra vez</a>
+        <a href="/login">Try again</a>
     </button>
 </div>
 
