Add Image entity and update Product entity to use Image objects; adjust security and template links

--- a/ByteMarket/backend/src/main/resources/templates/header.html
+++ b/ByteMarket/backend/src/main/resources/templates/header.html
@@ -37,14 +37,14 @@
                 </form>
             </div>
             <div class="col-2 loginButtons justify-content-end">
-                <a href="../login" style="text-decoration: none;">
+                <a href="../reports" style="text-decoration: none;">
                     <button class="btn btn-outline-dark btn-custom" type="submit">
                         <i class="bi bi-flag-fill"></i> Reportes
                     </button>
                 </a>
             </div>
             <div class="col-3 header-profile" height="55">
-                <a href="../views/profile.html" class="d-flex align-items-center text-decoration-none">
+                <a href="../profile" class="d-flex align-items-center text-decoration-none">
                     <div>
                         <img class="profilePic" src="images/perfil.png" alt="Logo">
                     </div>
@@ -68,28 +68,28 @@
             <div class="col-3 m-0 justify-content-center headerButtons">
                 <div>
                     <button class="btn btn-outline-dark btn-custom headerButton" type="button"
-                        onclick="window.location.href='../views/favorite.html'">
+                        onclick="window.location.href='/favorites'">
                         <i class="bi bi-heart-fill" style="color: white;"></i>
                         <span class="fav-sellText">Favoritos</span>
                     </button>
                 </div>
                 <div>
                     <button class="btn btn-outline-dark btn-custom headerButton" type="button"
-                        onclick="window.location.href='ByteMarket/backend/src/main/resources/templates/newProduct.html'">
+                        onclick="window.location.href='/newProduct'">
                         <i class="bi bi-plus-lg"></i>
                         <span class="fav-sellText">Vender</span>
                     </button>
                 </div>
                 <div>
                     <button class="btn btn-outline-dark btn-custom headerButton" type="button"
-                        onclick="window.location.href='../views/chat.html'">
+                        onclick="window.location.href='/chats'">
                         <i class="bi bi-chat-fill"></i>
                         <span class="fav-sellText">Chats</span>
                     </button>
                 </div>
             </div>
             <div class="col-2 header-profile" height="55">
-                <a href="../views/profile.html" class="d-flex align-items-center text-decoration-none">
+                <a href="/profile" class="d-flex align-items-center text-decoration-none">
                     <div>
                         <img class="profilePic" src="images/perfil.png" alt="Logo">
                     </div>
