--- a/ByteMarket/backend/src/main/resources/templates/login_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/login_template.html
@@ -33,8 +33,8 @@
         <h2 class="mb-4">Iniciar sesión</h2>
         <form class="form" action="/login" method="post">
             <div class="mb-3">
-                <label for="mail" class="form-label">Correo Electrónico</label>
-                <input type="email" class="form-control" id="mail" name="mail" placeholder="ejemplo@correo.com">
+                <label for="username" class="form-label">Correo Electrónico</label>
+                <input type="email" class="form-control" id="username" name="username" placeholder="ejemplo@correo.com">
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Contraseña</label>
