--- a/ByteMarket/backend/src/main/resources/templates/profile_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/profile_template.html
@@ -63,7 +63,7 @@
                 <h2 class="fw-bolder mb-3">Productos en venta</h2>
             </div>
             <div class="row otherProducts">
-                {{>product}}
+                <!-- AQUI METER PLANTILLA PRODUCTOS -->
             </div>
         </div>
 
