getting images from server

--- a/ByteMarket/backend/src/main/resources/templates/error.html
+++ b/ByteMarket/backend/src/main/resources/templates/error.html
@@ -25,11 +25,11 @@
         <strong>Error:</strong> {{message}}
     </div>
     <button class="btn btn-outline-dark btn-custom" type="submit">
-        <a href="/login">Try again</a>
+        <a href="/" style="text-decoration: none; color: white;">Volver a inicio</a>
     </button>
 </div>
 
-{{>footer}}
+<footer class="bg-dark text-white text-center py-2 fixed-bottom">ByteMarket</footer>
 
 </body>
 </html>
