--- a/ByteMarket/backend/src/main/resources/static/css/headerStyle.css
+++ b/ByteMarket/backend/src/main/resources/static/css/headerStyle.css
@@ -137,8 +137,10 @@
 
 /*FIN DE SECCION DE CSS PARA LA CABECERA CON EL USUARIO REGISTRAD0*/
 
-.productCard .card-img-top {
-    object-fit: cover;
+/* Estilo para el footer */
+
+footer{
+    position: fixed;
+    bottom: 0;
     width: 100%;
-    height: 200px; /* Todos las imágenes tendrán la misma altura */
 }
