--- a/ByteMarket/backend/src/main/resources/templates/home_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/home_template.html
@@ -25,7 +25,7 @@
     <section class="bg-dark py-2">
         <div class="container topProdContainer">
             <div class="text-white">
-                <h2 class="fw-bolder">{{featured_title}}</h2>
+                <h2 class="fw-bolder">Productos destacados</h2>
             </div>
             <div class="topProducts gx-4 gx-lg-5">
                 {{#featured_products}}
@@ -52,7 +52,7 @@
     <section class="py-4">
         <div class="container otherProdContainer">
             <div class="">
-                <h2 class="fw-bolder mb-3">{{other_products_title}}</h2>
+                <h2 class="fw-bolder mb-3">Otros productos</h2>
             </div>
             <div class="row otherProducts">
                 {{#other_products}}
