--- a/ByteMarket/backend/src/main/resources/templates/productDetail_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/productDetail_template.html
@@ -23,9 +23,9 @@
     <div class="container mt-4">
         <div class="row">
             <div class="col-md-6 scrolling-wrapper">
-                {{#product.images}}
-                <img src="{{this}}" class="img-fluid rounded" alt="Product Image">
-                {{/product.images}}
+                {{#images}}
+                <img src="{{.}}" class="img-fluid rounded" alt="Product Image">
+                {{/images}}
             </div>
             <div class="col-md-6">
                 <h1 class="fw-bold">{{product.name}}</h1>
