--- a/ByteMarket/backend/src/main/resources/templates/header.html
+++ b/ByteMarket/backend/src/main/resources/templates/header.html
@@ -68,7 +68,7 @@
             <div class="col-3 m-0 justify-content-center headerButtons">
                 <div>
                     <button class="btn btn-outline-dark btn-custom headerButton" type="button"
-                        onclick="window.location.href='/favorites'">
+                        onclick="window.location.href='/profile?filter=favorites'">
                         <i class="bi bi-heart-fill" style="color: white;"></i>
                         <span class="fav-sellText">Favoritos</span>
                     </button>
