--- a/ByteMarket/backend/src/main/resources/templates/navbar_profile.html
+++ b/ByteMarket/backend/src/main/resources/templates/navbar_profile.html
@@ -8,11 +8,11 @@
             aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                <li class="nav-item"><a class="nav-link" href="favorite.html">Favoritos</a></li>
-                <li class="nav-item"><a class="nav-link" href="reviews.html">Reseñas</a></li>
-                <li class="nav-item"><a class="nav-link" href="historyPurchase.html">Últimas compras</a></li>
-                <li class="nav-item"><a class="nav-link" href="historySales.html">Últimas ventas</a></li>
-            </ul>
+                <li class="nav-item"><a class="nav-link" href="/profile?filter=favorites" id="favoritesLink">Favoritos</a></li>
+                <li class="nav-item"><a class="nav-link" href="/profile?filter=reviews" id="reviewsLink">Reseñas</a></li>
+                <li class="nav-item"><a class="nav-link" href="/profile?filter=historyPurchase" id="historyPurchaseLink">Últimas compras</a></li>
+                <li class="nav-item"><a class="nav-link" href="/profile?filter=historySales" id="historySalesLink">Últimas ventas</a></li>
+            </ul>            
         </div>
     </div>
 </nav>
