--- a/ByteMarket/backend/src/main/resources/templates/signin_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/signin_template.html
@@ -58,14 +58,14 @@
 
             <div class="row d-flex justify-content-center buttons">
                 <div class="col-md-12">
-                    <button type="submit" class="btn btn-outline-dark btn-custom w-100 me-2">
+                    <button type="submit" class="btn btn-outline-dark btn-custom w-100 me-2 fw-bold">
                         <i class="bi bi-person-plus"></i> Registrarse
                     </button>
                 </div>
             </div>
 
             <div class="text-center">
-                <p>¿Ya tienes cuenta? <a href="/login" class="text-white">Inicia Sesión</a></p>
+                <p>¿Ya tienes cuenta? <a href="/login" class="text-black">Inicia Sesión</a></p>
             </div>
 
         </form>
