--- a/ByteMarket/backend/src/main/resources/templates/login_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/login_template.html
@@ -41,19 +41,15 @@
                 <input type="password" class="form-control" id="password" name="password">
             </div>
 
-            <div class="d-flex justify-content-between align-items-center mb-3">
-                <a href="#" class="text-white fw-normal">¿Olvidaste tu contraseña?</a>
-            </div>
-
             <div class="row d-flex justify-content-center buttons">
                 <div class="col-md-12">
-                        <input type="submit" class="btn btn-outline-dark btn-custom w-100 me-2" value="Iniciar Sesión"></input>
+                        <input type="submit" class="btn btn-outline-dark btn-custom w-100 me-2 fw-bold" value="Iniciar Sesión"></input>
                         <input type="hidden" name="_csrf" value="{{token}}"/>
                 </div>                
             </div>
 
             <div class="text-center">
-                <p>¿No tienes cuenta? <a href="/signin" class="text-white">Registrate</a></p>
+                <p>¿No tienes cuenta? <a href="/signin" class="text-black">Registrate</a></p>
             </div>
 
         </form>
