--- a/ByteMarket/backend/src/main/resources/templates/newProduct.html
+++ b/ByteMarket/backend/src/main/resources/templates/newProduct.html
@@ -36,18 +36,18 @@
                 <label for="category" class="form-label">Categoría</label>
                 <select class="form-select" id="category" name="category" required>
                     <option value="">Seleccione una categoría</option>
-                    <option value="electronic">Electrónica</option>
-                    <option value="phone">Móvil</option>
-                    <option value="computer">Ordenador</option>
-                    <option value="games">Videojuegos</option>
-                    <option value="others">Otros</option>
+                    <option value="Electrónica">Electrónica</option>
+                    <option value="Móvil">Móvil</option>
+                    <option value="Ordenador">Ordenador</option>
+                    <option value="Videojuegos">Videojuegos</option>
+                    <option value="Otros">Otros</option>
                 </select>
             </div>
         </div>
         <div class="row mb-3">
             <div class="col-md-6">
-                <label for="imageUpload" class="form-label">Subir Imágenes</label>
-                <input type="file" class="form-control" id="imageUpload" name="imageUpload" multiple accept="image/*">
+                <label for="imageUpload" class="form-label">Subir Imágenes (máx. 5) </label>
+                <input type="file" class="form-control" id="imageUpload" name="imageUpload" multiple accept="image/jpeg, image/png, image/jpg" required>
             </div>
         </div>
         <div class="row d-flex justify-content-between buttons">
