Add Products to Favorite. Change of name from LoginWebController to UserWebController

--- a/ByteMarket/backend/src/main/resources/templates/favorite.html
+++ b/ByteMarket/backend/src/main/resources/templates/favorite.html
@@ -28,7 +28,7 @@
                 <h2 class="fw-bolder mb-3">{{favorite_products_title}}</h2>
             </div>
             <div class="row otherProducts">
-                {{#favorite_products}}
+                {{#favoriteProducts}}
                 <div class="otherProduct col-3">
                     <a href="{{url}}" style="text-decoration: none;">
                         <div class="productCard card h-100">
@@ -42,7 +42,7 @@
                         </div>
                     </a>
                 </div>
-                {{/favorite_products}}
+                {{/favoriteProducts}}
             </div>
         </div>
     </section>
