--- a/ByteMarket/backend/src/main/resources/templates/productDetail_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/productDetail_template.html
@@ -35,8 +35,10 @@
                 <p>{{product.description}}</p>
                 <div class="d-grid gap-2">
                     <button class="btn btn-custom"><i class="bi bi-chat-fill m-2"></i>Contactar con el vendedor</button>
-                    <button class="btn btn-custom"><i class="bi bi-heart m-2" style="color: white;"></i>Añadir a
-                        favoritos</button>
+                    <form action="/product/{{product.id}}" method="post">
+                        <button type="submit" class="btn btn-custom"><i class="bi bi-heart m-2" style="color: white;"></i>Añadir a favoritos</button>
+                        <input type="hidden" name="_csrf" value="{{token}}"/>
+                    </form>
                 </div>
             </div>
         </div>
